--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node server.js"
 	},
 	"description": "A project that does something awesome",
+	"keywords": [ "descriptive", "related", "freecodecamp" ],
 	"engines": {
 		"node": "8.11.2"
 	},
