--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"author": "Sam FM",
 	"name": "fcc-learn-npm-package-json",
 	"license": "freecodecamp",
+	"version": "1.2",
+
+
 	"dependencies": {
 		"express": "^4.14.0"
 	},
